# lireta

./: .gitignore  Built-in keywords guide.md  Goals and motivations.md  README.md  pyproject.toml
.zed/: settings.json
docs/: Built-in keywords guide.md  CLI guide.md  Expansion guide.md  Goals and motivations.md  How does python resolve lireta syntax.md  Lireta keywords.md  Project guide.md  Quick starting guide.md  example.lireta
src/: audiowave.py  base.py  common.py  example.lireta  how syntax is resolved.txt  instrument.py  jsonparse.py  lexer.py  main.py  process.py  test.json
src/lireta/: __main__.py  audiowave.py  base.py  instrument.py  jsonparse.py  lexer.py  main.py  process.py  std.py
tests/: tests.py
typings/scipy/io/: wavfile.pyi
typings/sounddevice/: __init__.pyi
