[project]
name = "lireta"
version = "0.1.0"
requires-python = "~=3.13"
description = "A project to render simple music"
authors = [{ name = "Pedro H. Sauné", email = "<pedrohsaune@gmail.com>" }]
readme = "README.md"
dynamic = ["dependencies"]
license = "LGPL-3.0"
license-files = ["LICENSE.md"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
lireta = 'lireta.main:main'

[tool.poetry.dependencies]
numpy = "^2.2.4"
scipy = "^1.15.2"
sounddevice = "^0.5.1"
